--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <div class="logo-container">
                     <img src="images/nav-logo.jpg" class="logo">
-                    <div class="logo-text">zbar coder</div>
+                    <div class="logo-text">Azbar coder</div>
                 </div>
 
                 <div class="nav-items">
